--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>Nuestra dirección</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>Dr Eliseo Ramírez Ulloa, Doctores, 42090 Pachuca de Soto, Hgo.</p>
             </div>
           </div>
 
